<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".SettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        app:title="@string/Settings"
                        app:titleTextColor="@color/background"
                        android:layout_width="match_parent"
                        android:background="@color/Orange"
                        app:navigationIcon="@drawable/white_navigation_button"
                        android:layout_height="?attr/actionBarSize">
                    </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/CompanyName_tivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/appbarLayout"
            app:layout_constraintLeft_toLeftOf="@id/appbarLayout"/>

        <EditText
            android:id="@+id/CompanyName_EditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/CompanyName_tivi"
            app:layout_constraintLeft_toLeftOf="@id/CompanyName_tivi"/>

        <TextView
            android:id="@+id/settingsEmail_tivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txt"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/CompanyName_EditTxt"
            app:layout_constraintLeft_toLeftOf="@id/CompanyName_tivi"/>

        <EditText
            android:id="@+id/Email_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintTop_toBottomOf="@id/settingsEmail_tivi"
            app:layout_constraintLeft_toLeftOf="@id/CompanyName_EditTxt"/>

        <TextView
            android:id="@+id/About_tivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About_text"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/Email_EditText"
            app:layout_constraintLeft_toLeftOf="@id/settingsEmail_tivi"/>

        <EditText
            android:id="@+id/About_EditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintLeft_toLeftOf="@id/Email_EditText"
            app:layout_constraintTop_toBottomOf="@id/About_tivi" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_txt"
            android:textColor="@color/Orange"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/About_EditTxt"
            app:layout_constraintTop_toBottomOf="@+id/About_EditTxt" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/curve_button"
            android:text="@string/sign_out_txt"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>